objects/CarePlanTasksConfigs__mdt/CarePlanTasksConfigs__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Metadata is used to store Task Due Date Update Config Info Like Prerequisite Conditions on Order Goal and Task Objects and Due Date Values to Set</description>
    <label>CarePlanTasksConfig</label>
    <pluralLabel>CarePlanTasksConfigs</pluralLabel>
</CustomObject>