objects/CarePlanTasksConfigs__mdt/fields/APINamesOfChangedFieldsToRunLogic__c.field-meta.xml
<CustomField>
    <fullName>APINamesOfChangedFieldsToRunLogic__c</fullName>
    <description>This Field stores Comma separated fields list to Set Due Daye</description>
    <label>API Names of Changed Fields To Run Logic</label>
    <type>TextArea</type>
</CustomField>