objects/CarePlanTasksConfigs__mdt/fields/InheritDueDateFromOrderField__c.field-meta.xml
<CustomField>
    <fullName>InheritDueDateFromOrderField__c</fullName>
    <description>This Field is used to get Due Date from Order Field</description>
    <inlineHelpText>If you need to get Due Date from one of the Order Object Field , then please specify Order Object Fields API Name</inlineHelpText>
    <label>Inherit Due Date From Order Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>