objects/CarePlanTasksConfigs__mdt/fields/NoOfDaysToAddToInheritedDate__c.field-meta.xml
<CustomField>
    <fullName>NoOfDaysToAddToInheritedDate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NoOfDaysToAddToInheritedDate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>