objects/CarePlanTasksConfigs__mdt/fields/OrderConditionsInfo__c.field-meta.xml
<CustomField>
    <fullName>OrderConditionsInfo__c</fullName>
    <description>Please provide Conditions in JSON format .For or conditions provide comma separated list against field name</description>
    <inlineHelpText>Please provide Conditions in JSON format .
For or conditions provide comma separated list against field name</inlineHelpText>
    <label>Order Conditions Info</label>
    <type>TextArea</type>
</CustomField>