objects/CarePlanTasksConfigs__mdt/fields/TasksConditionsInfo__c.field-meta.xml
<CustomField>
    <fullName>TasksConditionsInfo__c</fullName>
    <description>This field stores the prerequisite conditions for order update</description>
    <label>Task Conditions Info</label>
    <type>TextArea</type>
</CustomField>