objects/CarePlanTasksConfigs__mdt/listViews/AllCarePlanTasksConfigs.listView-meta.xml
<ListView>
    <fullName>AllCarePlanTasksConfigs</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>OrderConditionsInfo__c</columns>
    <columns>TasksConditionsInfo__c</columns>
    <columns>NoOfDaysToAddToInheritedDate__c</columns>
    <columns>IsProtected</columns>
    <columns>APINamesOfChangedFieldsToRunLogic__c</columns>
    <columns>InheritDueDateFromOrderField__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>AllCarePlanTasksConfigs</label>
    <language>en_US</language>
</ListView>